[package]
name = "include-glsl"
description = "Include a GLSL shader as a byte string."
repository = "https://github.com/quadrupleslap/include-glsl.git"
license = "MIT"
version = "0.1.0"
authors = ["Ram Kaniyur <quadrupleslap@gmail.com>"]
edition = "2018"

[dependencies]
include-glsl-impl = "0.1.0"
proc-macro-hack = "0.5.11"
